fixed gap on quiz

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -591,7 +591,7 @@ footer {
     }
    
     .info-row {
-        margin-top: 25px;
+        margin-top: 0px;
     }
     .modal-header h1 {
         font-size: 2rem;
